<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadeScrollbars="true" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:id="@+id/whenLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/when" />

            <TextView
                android:id="@+id/when"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/whenLabel"
                android:maxLines="1"
                android:layout_alignBaseline="@id/whenLabel"
                android:padding="15dp"
                 >

            </TextView>

            <TextView
                android:id="@+id/fromLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/whenLabel"
                android:padding="15dp"
                android:gravity="center_vertical"
                android:text="@string/from" />

            <TextView
                android:id="@+id/from"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:layout_alignBaseline="@id/fromLabel"
                android:layout_below="@id/when"
                android:layout_toRightOf="@id/fromLabel"
                android:maxLines="1"
                android:padding="10dp"
                 >

            </TextView>

        </RelativeLayout>

        <AutoCompleteTextView
            android:id="@+id/to"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            android:focusable="false"
            android:editable="false"
            android:inputType="textEmailAddress"
            android:singleLine="true" >

            
        </AutoCompleteTextView>

        <EditText
            android:id="@+id/subject"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailSubject"
            android:focusable="false"
            android:hint="@string/subject"
            android:editable="false"
            android:singleLine="true" >
        </EditText>

        <EditText
            android:id="@+id/mailText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:gravity="top"
            android:editable="false"
            android:hint="@string/composeMail"
            android:minLines="5" />
    </LinearLayout>

</ScrollView>